fix: spacing on mobile #2

--- a/static/style.css
+++ b/static/style.css
@@ -148,7 +148,7 @@ ul li {
 
 article {
 	padding-top: 2rem;
-	margin: .6rem;
+	margin: 1rem;
 	/* box-sizing: border-box; */
 
 	@media (min-width: 480px) {
